<resources>
    <string name="app_name">TCC</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Proximo</string>
    <string name="text_ou">ou</string>
    <string name="continuar_com_google">Continuar com Google</string>
    <string name="cadastro_r_pido">Cadastro Rápido</string>
    <string name="avalie_e_ganhe_pontos">Avalie e ganhe pontos!</string>
    <string name="avaliando_os_restaurantes_voc_ir_ganhar_pontos_para_gastar_nos_seus_restaurantes_favoritos">Avaliando os restaurantes você irá ganhar pontos para gastar nos seus restaurantes favoritos!</string>
    <string name="avafast">AvaFast</string>
    <string name="como_resgatar_seus_pontos">Como resgatar seus pontos!</string>
    <string name="avaliando_os_restaurantes_voc_consegue_ganhar_pontos_e_adquirir_cupons">Avaliando os restaurantes, você consegue ganhar pontos e adquirir cupons.</string>
    <string name="como_funcionamos">Como funcionamos?</string>
    <string name="o_intuiro_do_nosso_aplicativo_oferecer_avalia_o_para_os_restaurantes_em_troca_de_recompensas_para_seus_clientes">O intuiro do nosso aplicativo é oferecer avaliação para os restaurantes em troca de recompensas para seus clientes.</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="seu_app_favorito">SEU APP FAVORITO!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="insira_seu_e_mail">Insira seu e-mail</string>
    <string name="endere_o_de_e_mail">Endereço de e-mail</string>
    <string name="n_mero_de_telefone">Número de Telefone</string>
    <string name="insira_sua_senha">Insira sua Senha</string>
    <string name="j_tem_login">Já tem Login?</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="lembrar_sempre">Lembrar sempre</string>
    <string name="entre_na_sua_conta">Entre na sua conta</string>
    <string name="pesquisar_restaurantes">Pesquisar restaurantes</string>
    <string name="restaurantes_melhor_avaliados">Restaurantes melhor avaliados</string>
</resources>