<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iniciodois"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciodois"
    tools:context=".MainActivity"
    >

    <Button

        android:id="@+id/back1"
        android:layout_width="104dp"

        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#430000"
        android:text="@string/voltar"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button

        android:id="@+id/btn_2"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#430000"
        android:onClick="iniciotres"
        android:text="@string/proximo"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="183dp"
        android:gravity="center"
        android:text="@string/avalie_e_ganhe_pontos"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="91dp"
        android:gravity="center"
        android:text="@string/avaliando_os_restaurantes_voc_ir_ganhar_pontos_para_gastar_nos_seus_restaurantes_favoritos"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="349dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="575dp"
        android:gravity="center"
        android:text="@string/avafast"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />


</RelativeLayout>