<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadastro"
    tools:context=".cadastro"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="234dp"
        android:layout_marginBottom="305dp"
        android:text="@string/cadastro_r_pido"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="457dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="245dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="195dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_call"
        app:tint="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="135dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_lock_lock"
        app:tint="#FFFFFF"
        tools:ignore="ImageContrastCheck" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="337dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_view"
        app:tint="#FFFFFF" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="240dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/endere_o_de_e_mail"
        android:textColor="#FFFFFF"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="185dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:minHeight="50dp"
        android:text="@string/n_mero_de_telefone"
        android:textColor="#FFFFFF"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="135dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="60dp"
        android:text="@string/insira_sua_senha"
        android:textColor="#FFFFFF"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="199dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="295dp"
        android:backgroundTint="#000000"
        android:text="@string/j_tem_login" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="190dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/common_google_signin_btn_text_light"
        tools:ignore="VisualLintBounds,DuplicateSpeakableTextCheck"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="69dp"
        android:text="@string/fazer_login"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="39dp"
        android:backgroundTint="#430000"
        android:text="@string/finalizar_cadastro" />


</RelativeLayout>