<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/searchbar"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/pesquisar_restaurantes"
        app:strokeColor="#000000"
        tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck,VisualLintButtonSize,VisualLintOverlap" />

    <TextView
        android:id="@+id/searchbar"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="25dp"
        android:backgroundTintMode="add"
        android:text="@string/pesquisar_restaurantes"
        android:textColor="#434141"
        app:strokeColor="#434141"
        tools:ignore="DuplicateIds,VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="347dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="225dp"
        android:text="@string/restaurantes_melhor_avaliados"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="374dp"
        android:layout_marginTop="228dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:rotation="180"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="TouchTargetSizeCheck"

        app:tint="#FFFFFF" />


</RelativeLayout>






